examples/test/testpolicy9889.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9889
  namespace: namespace45
spec:
  podSelector:
    matchLabels:
      key29: value9
      key14: value45
      key20: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value12
          key49: value10
          key48: value42
      podSelector:
        matchLabels:
          key49: value0
          key36: value13
          key5: value18
